2012-02-12  Olivier Ronez <dicollecte.org>:
        - back references in explanations, eg. # \1 should be...
        - display message without suggestion, eg. # foo -> _ # Message
        - function word() returns '' instead of None
        - add .gitignore

2012-02-04  László Németh <nemeth@numbertext.org>:
        - fix multiple suggestions, the problem reported by Yakov Reztsov 

2012-02-02  László Németh <nemeth@numbertext.org>:
        - Lightproof editor (rule development extension for LibreOffice)
        - use template and config system, based on
          the work of Olivier Ronez, author of French
          grammar checker Grammalecte.
        - code cleanups
        - move user code to different module to speed up
          its load (submodules use Python pyc format)

2011-12-16  László Németh <nemeth@numbertext.org>:
        - add FullCommentURL support
        - remove " [" from reversed space and punctuation
        - remove traceback.print_exc (problems on Windows reported by Olivier Ronez)
        - license: LGPL -> MPL/GPL/LGPL
        - remove tabulators for LibreOffice Git
        - options only in extension manager (temporarily)
        - help separator in dlg: now "\n" instead of "/"
        - long comments (\n), eg. # Did you mean:\nExplanation...
        - expressions in comments, eg. # =expression({word})
        - \u00AD (soft hyphen is not word boundary)
        - print traceback in LibreOffice
        - LOCALE, TEXT in rules, see doc.

        * lightproof_py.py: fix hasLocale() for LibreOffice 3.5

        - data/en_US.dat: improved English rules (a/an) rules

        * Complile.py: support "_" in pattern names.
        - add ^ for sentence beginning 

2011-07-12  László Németh <nemeth@numbertext.org>:
        * lightproof_handler_py.py: fix for LibreOffice
          Problem with option settings reported by Péter Benedek on
          openscope.org and others

        * Dialog.py: support for multiple options in a line.